--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.jackson.serialization.write_dates_as_timestamps=false
 
 # Comment out if using anything else than H2 (e.g. MySQL or PostgreSQL)
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.data.mongodb.database=vaadbase
+spring.data.mongodb.database=vaadtest
 
 
 # Uncomment if using PostgreSQL
