--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,7 @@
     <version>1.0-SNAPSHOT</version>
     <packaging>war</packaging>
 
+    <!-- Questo blocco sembra consolidato in tutte le demo recuperate -->
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
@@ -15,13 +16,16 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <failOnMissingWebXml>false</failOnMissingWebXml>
 
+        <!-- Standard -->
         <webapp.directory>src/main/webapp</webapp.directory>
 
         <!-- Dependencies -->
-        <vaadin.version>10.0.0.beta3</vaadin.version>
+        <!-- Va tenuta aggiornata la versione  di VAADIN  10.0.0 -->
+        <vaadin.version>10.0.0.beta9</vaadin.version>
         <spring-boot.version>2.0.0.RELEASE</spring-boot.version>
     </properties>
 
+    <!-- Questo blocco sembra consolidato in tutte le demo recuperate -->
     <pluginRepositories>
         <pluginRepository>
             <id>spring-milestone</id>
@@ -33,6 +37,7 @@
         </pluginRepository>
     </pluginRepositories>
 
+    <!-- Questo blocco sembra consolidato in tutte le demo recuperate -->
     <repositories>
         <repository>
             <id>vaadin-prereleases</id>
@@ -44,6 +49,7 @@
         </repository>
     </repositories>
 
+    <!-- Questo blocco sembra consolidato in tutte le demo recuperate -->
     <dependencyManagement>
         <dependencies>
             <dependency>
@@ -64,17 +70,37 @@
     </dependencyManagement>
 
     <dependencies>
+        <!-- Vaadin core -->
         <dependency>
             <groupId>com.vaadin</groupId>
             <artifactId>vaadin-core</artifactId>
             <version>${vaadin.version}</version>
         </dependency>
 
+        <!-- Forse no -->
         <dependency>
             <groupId>com.vaadin</groupId>
             <artifactId>flow-spring-boot-starter</artifactId>
         </dependency>
 
+
+        <!-- Spring -->
+        <dependency>
+            <groupId>com.vaadin</groupId>
+            <artifactId>vaadin-spring-boot-starter</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-devtools</artifactId>
+            <optional>true</optional>
+        </dependency>
+
+        <!-- Spring MONGO -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-mongodb</artifactId>
+        </dependency>
 
         <!--&lt;!&ndash; Spring &ndash;&gt;-->
         <!--<dependency>-->
@@ -109,10 +135,6 @@
         <!--<artifactId>spring-web</artifactId>-->
         <!--</dependency>-->
 
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-data-mongodb</artifactId>
-        </dependency>
         <!--<dependency>-->
         <!--<groupId>org.springframework.boot</groupId>-->
         <!--<artifactId>spring-boot-starter-tomcat</artifactId>-->
@@ -149,9 +171,9 @@
         </dependency>
 
         <!--<dependency>-->
-            <!--<groupId>org.junit.jupiter</groupId>-->
-            <!--<artifactId>junit-jupiter-api</artifactId>-->
-            <!--<scope>test</scope>-->
+        <!--<groupId>org.junit.jupiter</groupId>-->
+        <!--<artifactId>junit-jupiter-api</artifactId>-->
+        <!--<scope>test</scope>-->
         <!--</dependency>-->
         <!--&lt;!&ndash; https://mvnrepository.com/artifact/name.falgout.jeffrey.testing.junit5/mockito-extension &ndash;&gt;-->
         <dependency>
