--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,13 +4,6 @@ server.tomcat.uri-encoding=UTF-8
 spring.jackson.serialization.write_dates_as_timestamps=false
 
 # Comment out if using anything else than H2 (e.g. MySQL or PostgreSQL)
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.data.mongodb.database=vaadtest
 
-
-# Uncomment if using PostgreSQL
-#spring.jpa.hibernate.ddl-auto=create
-#spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
-#spring.datasource.url=jdbc:postgresql://localhost:5432/bakery_flow_spring
-#spring.datasource.username=springuser
-#spring.datasource.password=ThePassword
