--- a/pom.xml
+++ b/pom.xml
@@ -162,6 +162,13 @@
         <!--<artifactId>slf4j-simple</artifactId>-->
         <!--</dependency>-->
 
+        <!-- https://mvnrepository.com/artifact/org.eclipse.persistence/eclipselink -->
+        <dependency>
+            <groupId>org.eclipse.persistence</groupId>
+            <artifactId>eclipselink</artifactId>
+            <version>2.5.0</version>
+        </dependency>
+
         <!-- Algos -->
         <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok-maven -->
         <dependency>
