--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,8 @@
     <version>1.0-SNAPSHOT</version>
     <packaging>war</packaging>
 
+    <!-- @AIScript(sovrascrivibile = false) -->
+
     <!-- Questo blocco sembra consolidato in tutte le demo recuperate -->
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
@@ -101,6 +103,13 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-mongodb</artifactId>
         </dependency>
+
+        <!-- Old JPA -->
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+        </dependency>
+
 
         <!--&lt;!&ndash; Spring &ndash;&gt;-->
         <!--<dependency>-->
