--- a/pom.xml
+++ b/pom.xml
@@ -77,10 +77,10 @@
     </dependencyManagement>
 
     <dependencies>
-        <dependency>
-            <groupId>com.vaadin</groupId>
-            <artifactId>flow-spring-boot-starter</artifactId>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>com.vaadin</groupId>-->
+            <!--<artifactId>flow-spring-boot-starter</artifactId>-->
+        <!--</dependency>-->
 
         <!-- Spring -->
         <dependency>
