--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <artifactId>vaadbase</artifactId>
     <name>vaadbase</name>
     <version>1.0-SNAPSHOT</version>
-    <packaging>war</packaging>
+    <packaging>jar</packaging>
 
     <!-- @AIScript(sovrascrivibile = false) -->
 
@@ -25,15 +25,14 @@
         <vaadin.version>10.0.0</vaadin.version>
 
         <!-- Va tenuta aggiornata la versione di spring-boot -->
-        <spring-boot.version>2.0.2.RELEASE</spring-boot.version>
-
+        <spring-boot.version>2.0.3.RELEASE</spring-boot.version>
     </properties>
 
     <parent>
         <!-- Va tenuta aggiornata la versione di spring-boot -->
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.0.2.RELEASE</version>
+        <version>2.0.3.RELEASE</version>
     </parent>
 
     <!-- Questo blocco sembra consolidato in tutte le demo recuperate -->
