--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,17 @@
     <version>1</version>
     <packaging>jar</packaging>
 
+    <!-- Algos flag per i progetti derivati da questo -->
     <!-- @AIScript(sovrascrivibile = false) -->
+
+    <parent>
+        <!-- Va tenuta aggiornata la versione di spring-boot anche qui, perchè nel <parent> non accetta properties -->
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>2.0.3.RELEASE</version>
+        <relativePath /> <!-- lookup parent from repository -->
+    </parent>
+
 
     <!-- Questo blocco sembra consolidato in tutte le demo recuperate -->
     <properties>
@@ -21,19 +31,14 @@
         <!-- Standard -->
         <webapp.directory>src/main/webapp</webapp.directory>
 
+        <!-- Dependencies -->
         <!-- Va tenuta aggiornata la versione di VAADIN 10.0.x -->
-        <vaadin.version>10.0.0</vaadin.version>
+        <vaadin.version>10.0.1</vaadin.version>
 
         <!-- Va tenuta aggiornata la versione di spring-boot -->
         <spring-boot.version>2.0.3.RELEASE</spring-boot.version>
     </properties>
 
-    <parent>
-        <!-- Va tenuta aggiornata la versione di spring-boot anche qui, perchè nel <parent> non accetta properties -->
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.0.3.RELEASE</version>
-    </parent>
 
     <!-- Questo blocco sembra consolidato in tutte le demo recuperate -->
     <repositories>
@@ -44,6 +49,11 @@
         <repository>
             <id>Vaadin Directory</id>
             <url>http://maven.vaadin.com/vaadin-addons</url>
+        </repository>
+
+        <repository>
+            <id>com.google.guava</id>
+            <url>http://mvnrepository.com/artifact/com.google.guava/guava</url>
         </repository>
     </repositories>
 
@@ -84,7 +94,7 @@
         <dependency>
             <groupId>com.vaadin</groupId>
             <artifactId>vaadin-confirm-dialog-flow</artifactId>
-            <version>1.0.0.beta2</version>
+            <version>1.0.0</version>
         </dependency>
 
         <!-- Spring -->
@@ -141,12 +151,14 @@
             <version>5.1.0</version>
             <scope>test</scope>
         </dependency>
+
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-engine</artifactId>
             <version>5.1.0</version>
             <scope>test</scope>
         </dependency>
+
         <!-- https://mvnrepository.com/artifact/org.mockito/mockito-all -->
         <dependency>
             <groupId>org.mockito</groupId>
@@ -154,12 +166,14 @@
             <version>1.9.5</version>
             <scope>test</scope>
         </dependency>
+
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-core</artifactId>
             <version>2.16.0</version>
             <scope>test</scope>
         </dependency>
+
         <!-- https://mvnrepository.com/artifact/org.mockito/mockito-junit-jupiter -->
         <dependency>
             <groupId>org.mockito</groupId>
@@ -176,20 +190,27 @@
         </dependency>
         <!-- End Algos -->
 
-        <!-- https://mvnrepository.com/artifact/org.json/json -->
+         <!--https://mvnrepository.com/artifact/org.json/json-->
         <dependency>
             <groupId>org.json</groupId>
             <artifactId>json</artifactId>
             <version>20180130</version>
         </dependency>
 
-        <!-- https://mvnrepository.com/artifact/com.googlecode.json-simple/json-simple -->
+         <!--https://mvnrepository.com/artifact/com.googlecode.json-simple/json-simple-->
         <dependency>
             <groupId>com.googlecode.json-simple</groupId>
             <artifactId>json-simple</artifactId>
             <version>1.1</version>
         </dependency>
-        <!-- End Algos -->
+         <!--End Algos-->
+
+        <!-- https://mvnrepository.com/artifact/com.google.guava/guava -->
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>26.0-jre</version>
+        </dependency>
 
     </dependencies>
 
